# snapcraft

./: .bzrignore  .editorconfig  .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  .shellcheckrc  .travis-docker.sh  .travis.yml  .yamllint.yaml  20200304-core20-plugins.org  CODE_OF_CONDUCT.md  CODE_STYLE.md  CONTRIBUTING.md  Dockerfile  HACKING.md  HACKING.rst  Jenkinsfile  MANIFEST.in  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  README.org  README.rst  SECURITY.md  SRU.md  TESTING.md  Vagrantfile  appveyor.yml  build-examples.sh  common.mk  functions.sh  go.py  manual-tests.md  mypy.ini  osv-scanner.toml  pyproject.toml  (+21 more)
.github/: .copilot-collections.yaml  .jira_sync_config.yaml  CODEOWNERS  PULL_RELEASE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  release-drafter.yaml  release-drafter.yml  renovate.json5  spread-problem-matcher.json
.snapcraft/: travis_snapcraft.cfg
.workshop/: dev.yaml
ctypes/: __init__.py
ctypes_override/: __init__.py  ctypes_init.diff
debian/: changelog  control  copyright  rules  snapcraft-completion  snapcraft-examples.examples  snapcraft-examples.install  snapcraft-examples.lintian-overrides  snapcraft-parser.install  snapcraft-parser.lintian-overrides  snapcraft.bash-completion  snapcraft.install  snapcraft.lintian-overrides  snapcraft.manpages
demos/ros/src/listener/: CMakeLists.txt  package.xml
demos/ros/src/listener/scripts/: listener_node
examples/01-hello/: Makefile.am  Makefile.in  NEWS  TODO
examples/01-hello/build-aux/: depcomp  do-release-commit-and-tag  gendocs.sh  gnu-web-doc-update
examples/01-hello/contrib/: evolution.txt
examples/01-hello/doc/: hello.info  hello.texi  stamp-vti
examples/01-hello/lib/: dirname.c  gnulib.mk  progname.h
examples/01-hello/m4/: closeout.m4  gnulib-cache.m4  gnulib-comp.m4  non-recursive-gnulib-prefix-hack.m4  po.m4
examples/01-hello/man/: hello.x
examples/01-hello/po/: ChangeLog  LINGUAS  POTFILES.in  ca.gmo  da.po  de.gmo  el.gmo  es.gmo  et.gmo  eu.gmo  eu.po  fa.gmo  fa.po  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  id.gmo  id.po  it.gmo  ja.gmo  ka.gmo  ko.gmo  ms.gmo  nb.gmo  nb.po  nl.gmo  nl.po  nn.gmo  pl.gmo  pl.po  pt_BR.gmo  pt_BR.po  ro.gmo  ru.po  sk.gmo  sl.po  sr.po  sv.gmo  (+6 more)
examples/01-hello/src/: hello.c  system.h
examples/01-hello/tests/: greeting-1  hello-1  last-1  traditional-1
examples/04-hello-world-desktop/src/: CMakeLists.txt
examples/ros/src/beginner_tutorials/: CMakeLists.txt  package.xml
examples/ros/src/beginner_tutorials/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  listener.cpp  talker.cpp
extensions/env-injector/: Cargo.toml
extensions/env-injector/src/: main.rs
integration_tests/snaps/simple-cmake-replace/: CMakeLists.txt  config.h.in  snapcraft.yaml  test.c
snapcraft/tests/integration/snaps/ros-pip/src/timezone_test/: package.xml
snapcraft/tests/integration/snaps/ros-talker-listener/src/: CMakeLists.txt
snapcraft/tests/integration/snaps/ros-talker-listener/src/talker/: package.xml
tests/integration/snaps/cmake-with-env-var/: CMakeLists.txt  snapcraft.yaml  test.c
tests/integration/snaps/stage_env/: CMakeLists.txt  snapcraft.yaml
tests/spread-legacy/plugins-v2/snaps/colcon-stage-snaps/: CMakeLists.txt  package.xml
tests/spread-legacy/plugins-v2/snaps/colcon-stage-snaps/src/: subscriber.cpp
tests/spread-legacy/plugins-v2/snaps/test-snapcraft-fake-ros2-package-core20/: CMakeLists.txt  package.xml
tests/spread-legacy/plugins-v2/snaps/test-snapcraft-fake-ros2-package-core20/include/test_minimal_publisher/: subscriber.h
tests/spread-legacy/plugins-v2/snaps/test-snapcraft-fake-ros2-package-core20/snap/: snapcraft.yaml
tests/spread-legacy/plugins-v2/snaps/test-snapcraft-fake-ros2-package-core20/src/: publisher.cpp
tests/spread/_common/build-and-run-hello/poetry-hello/src/: pyproject.toml
tests/spread/_common/colcon-talker-listener/colcon-talker-listener/: package.xml
tests/spread/_common/python-hello/uv/src/: pyproject.toml
tests/spread/core24-suites/plugins/colcon-talker-listener/colcon-talker-listener/: CMakeLists.txt
tests/spread/core24-suites/plugins/colcon-talker-listener/colcon-talker-listener/launch/: talker_listener.launch.py
tests/spread/core24-suites/plugins/colcon-talker-listener/colcon-talker-listener/snap/: snapcraft.yaml
tests/spread/core24-suites/plugins/colcon-talker-listener/colcon-talker-listener/src/: subscriber_member_function.cpp
tests/spread/core24/python-hello/uv/src/: pyproject.toml
tests/spread/extensions/kf5-neon/snaps/qt5-hello/: CMakeLists.txt  hello.cpp
tests/spread/extensions/kf5-neon/snaps/qt5-hello/snap/: snapcraft.yaml
tests/spread/extensions/snaps/glib-hello/: CMakeLists.txt  hello.c
tests/spread/extensions/snaps/glib-hello/snap/: snapcraft.yaml
tests/spread/extensions/snaps/gnome-hello/: CMakeLists.txt
tests/spread/extensions/snaps/gnome-hello/snap/: snapcraft.yaml
tests/spread/plugins/craft-parts/build-and-run-hello/colcon-ros2-wrapper/: CMakeLists.txt
tests/spread/plugins/craft-parts/build-and-run-hello/colcon-ros2-wrapper/snap/: snapcraft.yaml
tests/spread/plugins/v2/snaps/catkin-tools-noetic-in-source-hello/: CMakeLists.txt
tests/spread/plugins/v2/snaps/colcon-ros2-foxy-rlcpp-hello/: package.xml
tests/spread/plugins/v2/snaps/colcon-ros2-foxy-rlcpp-hello/snap/: snapcraft.yaml
tour/01-hello/: .gitignore  AUTHORS  ChangeLog  README  README-dev  README-release  THANKS  aclocal.m4  config.in  configure  configure.ac  hello.1  maint.mk  snapcraft.yaml
tour/01-hello/build-aux/: announce-gen
tour/01-hello/contrib/: de_franconian_po.txt
tour/01-hello/doc/: local.mk
tour/01-hello/lib/: basename.c  closeout.c  closeout.h  dirname.h
tour/01-hello/po/: Makevars  bg.gmo  bg.po  ca.po  da.gmo  de.po  el.po  eo.gmo  eo.po  es.po  et.po  fi.gmo  gl.gmo  gl.po  he.gmo  he.po  hello.pot  hr.gmo  hr.po  hu.gmo  hu.po  it.po  ja.po  ka.po  ko.po  lv.gmo  lv.po  ms.po  nn.po  pt.gmo  pt.po  ro.po  ru.gmo  sk.po  sl.gmo  sr.gmo  th.po  tr.po  uk.po  vi.po  (+3 more)
tour/01-hello/tests/: greeting-2
(+6628 files in other folders)
