[package]
name = "env-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
http-body-util = "0.1.2"
hyper = {git = "https://github.com/hyperium/hyper", branch = "master"}
hyper-util = "0.1.6"
hyperlocal = {git = "https://github.com/softprops/hyperlocal", branch = "main"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }


[profile.release]
panic = "abort"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
