[package]
name = "env-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
http-body-util = "0.1.2"
hyper = {git = "https://github.com/hyperium/hyper", tag = "v1.4.1"}
hyper-util = "0.1.6"
hyperlocal = {git = "https://github.com/softprops/hyperlocal", tag = "v0.9.1"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }

[profile.release]
panic = "abort"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
